EQC-42 component rafce fix + header class styling added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
     .footer {
         @apply bg-primary text-white w-screen flex;
     }
+    .header {
+        @apply bg-primary text-white w-screen flex;
+    }
 }
 
 @layer utilities {
