--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,16 @@
 
 @layer components {
     .footer {
-        @apply bg-primary text-white w-screen flex;
+        @apply bg-primary text-white w-screen;
     }
     .header {
-        @apply bg-primary text-white w-screen flex;
+        @apply shadow-md items-center justify-between bg-white w-screen;
+    }
+    .container-flex {
+        @apply px-2 py-5 flex sm:px-10 sm:py-7 lg:px-16 xl:px-20 2xl:px-24;
+    }
+    .button {
+        @apply px-4 py-2 rounded-md font-semibold text-lg bg-white;
     }
 }
 
@@ -18,4 +24,9 @@
     .text-primary {
         color: #0038ff;
     }
+}
+
+::selection {
+    background-color: #0038ff;
+    color: #fff;
 }
