--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@
     .button-nav {
         @apply flex items-center justify-start gap-x-2 hover:bg-primary rounded-xl transition duration-500 ease-in-out hover:text-white;
     }
+    .LeftSidebarOption {
+        @apply flex whitespace-nowrap text-base items-center gap-x-2 text-black hover:opacity-60 duration-300 transition ease-in-out;
+    }
 }
 
 @layer utilities {
